--- a/app/scss/blocks/footer.scss
+++ b/app/scss/blocks/footer.scss
@@ -7,16 +7,32 @@
 }
 .footer__top {
   display: flex;
+  flex-direction: column;
+  @include media($sm) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @include media($ms) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 .footer__wrap {
   margin-bottom: 26px;
+  @include media($sm) {
+    margin-right: 40px;
+  }
 }
 .footer__title {
   color: #fff;
+  @include font(14px, 18px, 400, $second-family);
   margin-bottom: 6px;
 }
 .footer__subtitle {
   color: #878787;
+  @include font(14px, 18px, 400, $second-family);
+  @include media($sm) {
+    max-width: 260px;
+  }
 }
 .footer__bottom::before {
   content: " ";
@@ -31,14 +47,19 @@
   position: relative;
   padding-top: 30px;
   cursor: pointer;
+  flex-wrap: wrap;
 }
 .footer__order {
   color: #878787;
   text-decoration: none;
-  margin-right: 57px;
+  @include font(14px, 20px, 400, $circe-family);
+  @include media($xs-s) {
+    margin-right: 57px;
+  }
 }
 .footer__privacy {
   color: #878787;
+  @include font(14px, 20px, 400, $circe-family);
   text-decoration: none;
   margin-right: 15px;
 }
@@ -46,6 +67,7 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+  max-width: 180px;
 }
 .footer__circle {
   background-color: #878787;
@@ -59,4 +81,5 @@
 .footer__condition {
   color: #878787;
   text-decoration: none;
+  @include font(14px, 20px, 400, $circe-family);
 }
