--- a/app/scss/fonts.scss
+++ b/app/scss/fonts.scss
@@ -2,3 +2,12 @@
   font-family: 'Roboto';
   src: url('../fonts/Roboto/Roboto-Regular.ttf') format('truetype');
 }
+@font-face { 
+  font-family: "CirceRegular";
+  src: url("../fonts/CirceRegular/CirceRegular.eot");
+  src: url("../fonts/CirceRegular/CirceRegular.eot?#iefix")format("embedded-opentype"),
+  url("../fonts/CirceRegular/CirceRegular.woff") format("woff"),
+  url("../fonts/CirceRegular/CirceRegular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 400;
+}
