--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -14,3 +14,7 @@
 @import 'blocks/slick';
 @import 'blocks/reviews';
 @import 'blocks/footer';
+@import 'blocks/form';
+@import 'blocks/burger';
+@import 'blocks/element';
+@import 'blocks/btn';
