--- a/app/scss/blocks/button.scss
+++ b/app/scss/blocks/button.scss
@@ -6,6 +6,7 @@
   transition: ease-out 0.2s;
   text-align: center;
   text-decoration: none;
+  background-color: $button-bg-white;
 }
 .button--width {
   max-width: 430px;
