--- a/app/scss/blocks/burger.scss
+++ b/app/scss/blocks/burger.scss
@@ -9,21 +9,15 @@
   position: absolute;
   width: 23px;
   height: 4px;
-  background-color: black;
+  background-color: $burger-bg-black;
   top: 50%;
   margin-top: -1px;
   left: 0;
   transition: transform 0.2s ease, opacity 0.2s ease;
 }
-.burger__line:first-child {
-  transform: translateY(-8px);
-}
-.burger__line:last-child {
-  transform: translateY(8px);
-}
 .burger--active .burger__line:first-child {
   transform: translateY(0) rotate(45deg);
-  background-color: black;
+  background-color: $burger-bg-black;
 }
 .burger--active .burger__line:nth-child(2) {
   background-color: transparent;
@@ -31,7 +25,7 @@
 }
 .burger--active .burger__line:last-child {
   transform: translateY(0) rotate(-45deg);
-  background-color: black;
+  background-color: $burger-bg-black;
 }
 .burger:hover {
   opacity: 0.6;
