--- a/app/scss/blocks/form.scss
+++ b/app/scss/blocks/form.scss
@@ -1,10 +1,10 @@
 .form {
   max-width: 280px;
-  background-color: white;
+  background-color: $form-bg-white;
   margin: 0 auto;
   padding: 24px 20px;
   border-radius: 22px;
-  border: 1px solid#232323;
+  border: 1px solid $form-border-grey;
   position: absolute;
   top: 84px;
   @include media($md) {
@@ -24,21 +24,23 @@
   text-align: center;
 }
 .form__wrap-title {
-  background-color: #ffda1f;
+  background-color: $form-bg-orange;
   padding: 5px;
   border-radius: 16px;
   max-width: 180px;
   @include font(16px, 24px, 400, $plex-sans-family);
-  color: #000;
+  color: $form-color-black;
+  align-self: flex-start;
   text-align: center;
   margin-bottom: 16px;
 }
 .form__subtitle {
   @include font(12px, 16px, 400, $plex-sans-family);
-  color: #000;
+  color: $form-color-black;
   letter-spacing: 0.01em;
   max-width: 220px;
   margin-bottom: 30px;
+  align-self: flex-start;
   @include media($md) {
     max-width: 420px;
   }
@@ -70,11 +72,13 @@
   position: relative;
 }
 .form__input {
-  padding: 20px 24px;
+  padding: 20px 62px 20px 24px;
   border-radius: 16px;
-  border: 1px solid #000;
+  border: 1px solid $form-border-black;
+  @include font(16px, 24px, 400, $plex-sans-family);
+  color: $form-color-black;
   width: 235px;
-  cursor: pointer;
+  cursor: text;
   width: 220px;
   @include media($md) {
     width: 500px;
@@ -86,4 +90,12 @@
 .form__element {
   position: absolute;
   right: 30px;
+}
+.form__burger {
+  margin-left: auto;
+  z-index: 3;
+  position: relative;
+  position: absolute;
+  top: 16px;
+  right: 16px;
 }
