--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -26,6 +26,7 @@
   text-align: center;
   max-width: 670px;
   margin-bottom: 30px;
+  color: $header-color-black;
   @include media($md) {
     margin-bottom: 20px;
   }
@@ -34,6 +35,7 @@
   text-align: center;
   max-width: 700px;
   margin-bottom: 30px;
+  color: $header-color-black;
   @include media($md) {
     margin-bottom: 36px;
   }
@@ -64,7 +66,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background-color: #81b3d2;
+  background-color: $header-bg-blue;
   z-index: 2;
   transition: transform 0.2s;
   transform: translateX(-100%);
@@ -78,12 +80,4 @@
   transform: translateX(0);
   opacity: 1;
   pointer-events: auto;
-}
-.header__burger {
-  margin-left: auto;
-  z-index: 3;
-  position: relative;
-  position: absolute;
-  top: 16px;
-  right: 16px;
 }
