--- a/app/scss/blocks/slick.scss
+++ b/app/scss/blocks/slick.scss
@@ -47,7 +47,7 @@
 .slick-arrow.slick-prev {
   right: 34px;
   background: url(../img/header/arrow.svg) no-repeat center;
-  background-color: white;
+  background-color: $slick-bg-white;
   border: none;
   background-size: 55%;
   @include media($md) {
@@ -60,7 +60,7 @@
 } /* Стрелка вправо */
 .slick-arrow.slick-next {
   background: url(../img/header/arrow.svg) no-repeat center;
-  background-color: white;
+  background-color: $slick-bg-white;
   border: none;
   transform: rotate(180deg);
   background-size: 55%;
